[package]
name = "mpl_bubblegum_nif"
version = "0.1.0"
edition = "2021"

[lib]
name = "mpl_bubblegum_nif"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.29.1"
solana-sdk = "1.18.0"
solana-client = "1.18.0"
solana-program = "1.18.0"
mpl-bubblegum = { path = "../../../../clients/rust" }
spl-account-compression = "0.3.1"
spl-noop = "0.2.0"
borsh = "0.10.3"
thiserror = "1.0.50"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
base64 = "0.21.5"